add offset and limit to proto request
