# m2m/api/device.pb.go
@@ -28,21 +28,21 @@ const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 type DeviceMode int32
 
 const (
-	DeviceMode_inactive              DeviceMode = 0
-	DeviceMode_free_gateways_limited DeviceMode = 1
-	DeviceMode_whole_network         DeviceMode = 3
+	DeviceMode_dv_inactive              DeviceMode = 0
+	DeviceMode_dv_free_gateways_limited DeviceMode = 1
+	DeviceMode_dv_whole_network         DeviceMode = 3
 )
 
 var DeviceMode_name = map[int32]string{
-	0: "inactive",
-	1: "free_gateways_limited",
-	3: "whole_network",
+	0: "dv_inactive",
+	1: "dv_free_gateways_limited",
+	3: "dv_whole_network",
 }
 
 var DeviceMode_value = map[string]int32{
-	"inactive":              0,
-	"free_gateways_limited": 1,
-	"whole_network":         3,
+	"dv_inactive":              0,
+	"dv_free_gateways_limited": 1,
+	"dv_whole_network":         3,
 }
 
 func (x DeviceMode) String() string {
@@ -55,6 +55,8 @@ func (DeviceMode) EnumDescriptor() ([]byte, []int) {
 
 type GetDeviceListRequest struct {
 	OrgId                int64    `protobuf:"varint,1,opt,name=org_id,json=orgId,proto3" json:"org_id,omitempty"`
+	Offset               int64    `protobuf:"varint,2,opt,name=offset,proto3" json:"offset,omitempty"`
+	Limit                int64    `protobuf:"varint,3,opt,name=limit,proto3" json:"limit,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -88,6 +90,20 @@ var xxx_messageInfo_GetDeviceListRequest proto.InternalMessageInfo
 func (m *GetDeviceListRequest) GetOrgId() int64 {
 	if m != nil {
 		return m.OrgId
+	}
+	return 0
+}
+
+func (m *GetDeviceListRequest) GetOffset() int64 {
+	if m != nil {
+		return m.Offset
+	}
+	return 0
+}
+
+func (m *GetDeviceListRequest) GetLimit() int64 {
+	if m != nil {
+		return m.Limit
 	}
 	return 0
 }
@@ -142,6 +158,8 @@ func (m *GetDeviceListResponse) GetUserProfile() *ProfileResponse {
 type GetDeviceProfileRequest struct {
 	OrgId                int64    `protobuf:"varint,1,opt,name=org_id,json=orgId,proto3" json:"org_id,omitempty"`
 	DevId                int64    `protobuf:"varint,2,opt,name=dev_id,json=devId,proto3" json:"dev_id,omitempty"`
+	Offset               int64    `protobuf:"varint,3,opt,name=offset,proto3" json:"offset,omitempty"`
+	Limit                int64    `protobuf:"varint,4,opt,name=limit,proto3" json:"limit,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -182,6 +200,20 @@ func (m *GetDeviceProfileRequest) GetOrgId() int64 {
 func (m *GetDeviceProfileRequest) GetDevId() int64 {
 	if m != nil {
 		return m.DevId
+	}
+	return 0
+}
+
+func (m *GetDeviceProfileRequest) GetOffset() int64 {
+	if m != nil {
+		return m.Offset
+	}
+	return 0
+}
+
+func (m *GetDeviceProfileRequest) GetLimit() int64 {
+	if m != nil {
+		return m.Limit
 	}
 	return 0
 }
@@ -291,6 +323,8 @@ func (m *GetDeviceProfileResponse) GetUserProfile() *ProfileResponse {
 type GetDeviceHistoryRequest struct {
 	OrgId                int64    `protobuf:"varint,1,opt,name=org_id,json=orgId,proto3" json:"org_id,omitempty"`
 	DevId                int64    `protobuf:"varint,2,opt,name=dev_id,json=devId,proto3" json:"dev_id,omitempty"`
+	Offset               int64    `protobuf:"varint,3,opt,name=offset,proto3" json:"offset,omitempty"`
+	Limit                int64    `protobuf:"varint,4,opt,name=limit,proto3" json:"limit,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -331,6 +365,20 @@ func (m *GetDeviceHistoryRequest) GetOrgId() int64 {
 func (m *GetDeviceHistoryRequest) GetDevId() int64 {
 	if m != nil {
 		return m.DevId
+	}
+	return 0
+}
+
+func (m *GetDeviceHistoryRequest) GetOffset() int64 {
+	if m != nil {
+		return m.Offset
+	}
+	return 0
+}
+
+func (m *GetDeviceHistoryRequest) GetLimit() int64 {
+	if m != nil {
+		return m.Limit
 	}
 	return 0
 }
@@ -439,7 +487,6 @@ func (m *SetDeviceModeRequest) GetDevMode() string {
 
 type SetDeviceModeResponse struct {
 	Status               bool             `protobuf:"varint,1,opt,name=status,proto3" json:"status,omitempty"`
-	DevMode              DeviceMode       `protobuf:"varint,2,opt,name=dev_mode,json=devMode,proto3,enum=api.DeviceMode" json:"dev_mode,omitempty"`
 	UserProfile          *ProfileResponse `protobuf:"bytes,3,opt,name=user_profile,json=userProfile,proto3" json:"user_profile,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}         `json:"-"`
 	XXX_unrecognized     []byte           `json:"-"`
@@ -478,13 +525,6 @@ func (m *SetDeviceModeResponse) GetStatus() bool {
 	return false
 }
 
-func (m *SetDeviceModeResponse) GetDevMode() DeviceMode {
-	if m != nil {
-		return m.DevMode
-	}
-	return DeviceMode_inactive
-}
-
 func (m *SetDeviceModeResponse) GetUserProfile() *ProfileResponse {
 	if m != nil {
 		return m.UserProfile
@@ -508,43 +548,44 @@ func init() {
 func init() { proto.RegisterFile("device.proto", fileDescriptor_870276a56ac00da5) }
 
 var fileDescriptor_870276a56ac00da5 = []byte{
-	// 564 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xc4, 0x54, 0xc1, 0x6e, 0xd3, 0x40,
-	0x10, 0xc5, 0x31, 0x0d, 0xe9, 0x24, 0x29, 0x61, 0x95, 0xb4, 0x89, 0x69, 0x85, 0xf1, 0x29, 0x8a,
-	0x44, 0x22, 0xa5, 0x07, 0x24, 0xce, 0x95, 0xda, 0x4a, 0x20, 0x21, 0x57, 0x9c, 0x2d, 0xd3, 0x9d,
-	0xb8, 0xab, 0xa4, 0x5e, 0xd7, 0xbb, 0x71, 0xd4, 0x2b, 0x12, 0x12, 0x77, 0xf8, 0x24, 0xfe, 0x80,
-	0x5f, 0xe0, 0x43, 0x90, 0xd7, 0xeb, 0x60, 0x3b, 0xa1, 0x42, 0xb9, 0xf4, 0x14, 0x67, 0xf6, 0xcd,
-	0x7b, 0x6f, 0x66, 0x67, 0x16, 0x5a, 0x14, 0x13, 0x76, 0x8d, 0xe3, 0x28, 0xe6, 0x92, 0x13, 0xd3,
-	0x8f, 0x98, 0x75, 0x1c, 0x70, 0x1e, 0x2c, 0x70, 0xe2, 0x47, 0x6c, 0xe2, 0x87, 0x21, 0x97, 0xbe,
-	0x64, 0x3c, 0x14, 0x19, 0xc4, 0x6a, 0x47, 0x31, 0x9f, 0xb1, 0x85, 0xce, 0x70, 0xde, 0x40, 0xf7,
-	0x1c, 0xe5, 0x99, 0x22, 0x79, 0xcf, 0x84, 0x74, 0xf1, 0x6e, 0x89, 0x42, 0x92, 0x1e, 0xd4, 0x79,
-	0x1c, 0x78, 0x8c, 0xf6, 0x0d, 0xdb, 0x18, 0x9a, 0xee, 0x1e, 0x8f, 0x83, 0x4b, 0xea, 0x7c, 0x35,
-	0xa0, 0x57, 0xc1, 0x8b, 0x88, 0x87, 0x02, 0xc9, 0x29, 0x34, 0x29, 0x26, 0x9e, 0x66, 0xef, 0x1b,
-	0xb6, 0x39, 0x6c, 0x4e, 0xc9, 0xd8, 0x8f, 0xd8, 0x38, 0x43, 0x7f, 0xcc, 0x4e, 0x5c, 0xa0, 0x98,
-	0xe8, 0x6f, 0xf2, 0x16, 0x5a, 0x4b, 0x81, 0xf1, 0x3a, 0xab, 0x66, 0x1b, 0xc3, 0xe6, 0xb4, 0xab,
-	0xb2, 0x72, 0xbc, 0x16, 0x70, 0x9b, 0x29, 0x52, 0x07, 0x9d, 0x73, 0x38, 0x5a, 0xdb, 0x58, 0x03,
-	0x1f, 0x72, 0x9e, 0x86, 0x53, 0x7f, 0x8c, 0x2a, 0x11, 0xd3, 0xdd, 0xa3, 0x98, 0x5c, 0x52, 0xe7,
-	0x13, 0xb4, 0x4b, 0x2c, 0xe4, 0x00, 0x6a, 0xeb, 0xd4, 0x1a, 0xa3, 0xc4, 0x86, 0xd6, 0x6c, 0xee,
-	0x65, 0x5d, 0xf6, 0x16, 0xbe, 0xce, 0x86, 0xd9, 0x5c, 0xf7, 0xc0, 0x27, 0x04, 0x9e, 0xde, 0x72,
-	0x8a, 0x7d, 0xd3, 0x36, 0x86, 0xfb, 0xae, 0xfa, 0x76, 0xbe, 0x19, 0xd0, 0xdf, 0x34, 0xf8, 0xe8,
-	0xad, 0xba, 0x60, 0x42, 0xf2, 0xf8, 0x7e, 0xb7, 0x56, 0xc9, 0x42, 0x49, 0x6b, 0x22, 0x5d, 0xd2,
-	0xab, 0xac, 0xa4, 0x9b, 0x2c, 0xac, 0xe8, 0xf6, 0x95, 0x7d, 0x0d, 0xdc, 0xdd, 0xbe, 0x07, 0xdd,
-	0xab, 0x5c, 0xf5, 0x03, 0xa7, 0xbb, 0x5d, 0x33, 0x19, 0x40, 0x23, 0x0d, 0x17, 0xee, 0xe9, 0x19,
-	0xc5, 0x24, 0xe5, 0x73, 0x7e, 0x18, 0xd0, 0xab, 0x28, 0xe8, 0xa2, 0x0e, 0xa1, 0x2e, 0xa4, 0x2f,
-	0x97, 0x42, 0x49, 0x34, 0x5c, 0xfd, 0x8f, 0x8c, 0x0a, 0x64, 0xa9, 0xca, 0xc1, 0xf4, 0x79, 0xe1,
-	0xf2, 0x14, 0x45, 0xce, 0xbe, 0x51, 0xb7, 0xf9, 0x9f, 0x75, 0x8f, 0x2e, 0x00, 0xfe, 0xf2, 0x91,
-	0x16, 0x34, 0x58, 0xe8, 0x5f, 0x4b, 0x96, 0x60, 0xe7, 0x09, 0x19, 0x40, 0x6f, 0x16, 0x23, 0x7a,
-	0x81, 0x2f, 0x71, 0xe5, 0xdf, 0x0b, 0x6f, 0xc1, 0x6e, 0x99, 0x44, 0xda, 0x31, 0xc8, 0x0b, 0x68,
-	0xaf, 0x6e, 0xf8, 0x02, 0xbd, 0x10, 0xe5, 0x8a, 0xc7, 0xf3, 0x8e, 0x39, 0xfd, 0x69, 0xe6, 0x33,
-	0x7e, 0x85, 0x71, 0xfa, 0x43, 0x10, 0xda, 0xa5, 0x25, 0x26, 0x03, 0xe5, 0x67, 0xdb, 0x43, 0x60,
-	0x59, 0xdb, 0x8e, 0x32, 0xc3, 0xce, 0xc9, 0x97, 0x5f, 0xbf, 0xbf, 0xd7, 0x8e, 0x48, 0x4f, 0xbd,
-	0x35, 0xd9, 0x8e, 0x4c, 0x02, 0x94, 0x67, 0x89, 0x62, 0xbd, 0x83, 0x4e, 0x75, 0x07, 0xc8, 0x71,
-	0x99, 0xae, 0xbc, 0xbb, 0xd6, 0xc9, 0x3f, 0x4e, 0xb5, 0x9e, 0xad, 0xf4, 0x2c, 0xd2, 0xdf, 0xd0,
-	0xcb, 0xe9, 0xc3, 0x82, 0x64, 0x3e, 0x7a, 0x15, 0xc9, 0xf2, 0x0e, 0x54, 0x25, 0x2b, 0x83, 0xfd,
-	0x40, 0x89, 0x29, 0x92, 0x30, 0x68, 0x97, 0x66, 0x47, 0x77, 0x72, 0xdb, 0xc4, 0xea, 0x4e, 0x6e,
-	0x1d, 0x35, 0xe7, 0xb5, 0x92, 0x79, 0xe9, 0x1c, 0x16, 0x65, 0x84, 0x82, 0xa6, 0xb8, 0x77, 0xc6,
-	0xe8, 0x73, 0x5d, 0x3d, 0xd8, 0xa7, 0x7f, 0x02, 0x00, 0x00, 0xff, 0xff, 0x5a, 0xc2, 0x00, 0xa5,
-	0xf2, 0x05, 0x00, 0x00,
+	// 580 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xc4, 0x95, 0x41, 0x6f, 0xd3, 0x30,
+	0x14, 0xc7, 0x49, 0xb3, 0x95, 0xed, 0x75, 0x85, 0xca, 0x6a, 0xb7, 0x2c, 0x74, 0xa2, 0xe4, 0x34,
+	0xed, 0xd0, 0x4a, 0xdd, 0x01, 0x89, 0xf3, 0x24, 0x40, 0x02, 0x09, 0x32, 0x71, 0xe2, 0x60, 0x99,
+	0xf9, 0x25, 0xb5, 0xda, 0xc5, 0x59, 0xec, 0xa6, 0xda, 0x15, 0x09, 0x89, 0x3b, 0x5f, 0x89, 0x6f,
+	0xc0, 0x57, 0xe0, 0x83, 0xa0, 0x38, 0x6e, 0x69, 0xd2, 0x32, 0xa1, 0x1d, 0xe0, 0xd4, 0xd8, 0xfe,
+	0xfb, 0xfd, 0xde, 0xff, 0xe5, 0xbd, 0x14, 0x0e, 0x38, 0xe6, 0xe2, 0x0a, 0x87, 0x69, 0x26, 0xb5,
+	0x24, 0x2e, 0x4b, 0x85, 0xdf, 0x8f, 0xa5, 0x8c, 0x67, 0x38, 0x62, 0xa9, 0x18, 0xb1, 0x24, 0x91,
+	0x9a, 0x69, 0x21, 0x13, 0x55, 0x4a, 0xfc, 0x76, 0x9a, 0xc9, 0x48, 0xcc, 0xec, 0x8d, 0xe0, 0x23,
+	0x74, 0x5f, 0xa2, 0xbe, 0x30, 0x41, 0xde, 0x08, 0xa5, 0x43, 0xbc, 0x99, 0xa3, 0xd2, 0xa4, 0x07,
+	0x4d, 0x99, 0xc5, 0x54, 0x70, 0xcf, 0x19, 0x38, 0xa7, 0x6e, 0xb8, 0x2b, 0xb3, 0xf8, 0x35, 0x27,
+	0x87, 0xd0, 0x94, 0x51, 0xa4, 0x50, 0x7b, 0x0d, 0xb3, 0x6d, 0x57, 0xa4, 0x0b, 0xbb, 0x33, 0x71,
+	0x2d, 0xb4, 0xe7, 0x96, 0x6a, 0xb3, 0x08, 0xbe, 0x38, 0xd0, 0xab, 0x45, 0x57, 0xa9, 0x4c, 0x14,
+	0x92, 0x73, 0x68, 0x71, 0xcc, 0xa9, 0xcd, 0xc5, 0x73, 0x06, 0xee, 0x69, 0x6b, 0x4c, 0x86, 0x2c,
+	0x15, 0xc3, 0x52, 0xfd, 0xae, 0x3c, 0x09, 0x81, 0x63, 0x6e, 0x9f, 0xc9, 0x73, 0x38, 0x98, 0x2b,
+	0xcc, 0x56, 0xb7, 0x8a, 0x14, 0x5a, 0xe3, 0xae, 0xb9, 0xb5, 0xd4, 0x5b, 0x40, 0xd8, 0x2a, 0x94,
+	0x76, 0x33, 0x98, 0xc3, 0xd1, 0x2a, 0x8d, 0x95, 0xf0, 0x4e, 0x9f, 0x3d, 0x68, 0x16, 0xf9, 0x09,
+	0x6e, 0x7d, 0xee, 0x72, 0xcc, 0x2b, 0xf6, 0xdd, 0xed, 0xf6, 0x77, 0xd6, 0xed, 0x7f, 0x80, 0x76,
+	0x85, 0x49, 0x1e, 0x41, 0x63, 0x05, 0x6a, 0x08, 0x4e, 0x06, 0x70, 0x10, 0x4d, 0x69, 0xf9, 0x06,
+	0xe9, 0x8c, 0x59, 0x16, 0x44, 0x53, 0x5b, 0x31, 0x46, 0x08, 0xec, 0x5c, 0x4b, 0x8e, 0x06, 0xb7,
+	0x1f, 0x9a, 0xe7, 0xe0, 0xab, 0x03, 0xde, 0xa6, 0x9d, 0xff, 0x5e, 0xd8, 0x57, 0x42, 0x69, 0x99,
+	0xdd, 0xfe, 0x8b, 0xc2, 0xea, 0xb5, 0x02, 0xac, 0xb0, 0xb6, 0x00, 0x4f, 0xcb, 0x02, 0x4c, 0xca,
+	0x6d, 0x03, 0xdf, 0x37, 0x66, 0xad, 0xf0, 0xfe, 0x66, 0x29, 0x74, 0x2f, 0x97, 0xd4, 0xb7, 0x92,
+	0xdf, 0xb3, 0x85, 0x8e, 0x61, 0xaf, 0xd8, 0x5e, 0x7b, 0xab, 0x0f, 0x39, 0xe6, 0x45, 0xbc, 0x60,
+	0x02, 0xbd, 0x1a, 0xc0, 0x7a, 0x3a, 0x84, 0xa6, 0xd2, 0x4c, 0xcf, 0x95, 0x21, 0xec, 0x85, 0x76,
+	0xb5, 0x61, 0xc5, 0xfd, 0x4b, 0x2b, 0x67, 0xef, 0x01, 0x7e, 0x63, 0xc8, 0x63, 0x68, 0xf1, 0x9c,
+	0x8a, 0x84, 0x5d, 0x69, 0x91, 0x63, 0xe7, 0x01, 0xe9, 0x83, 0xc7, 0x73, 0x1a, 0x65, 0x88, 0x34,
+	0x66, 0x1a, 0x17, 0xec, 0x56, 0x51, 0x53, 0x79, 0xe4, 0x1d, 0x87, 0x74, 0xa1, 0xc3, 0x73, 0xba,
+	0x98, 0xc8, 0x19, 0xd2, 0x04, 0xf5, 0x42, 0x66, 0xd3, 0x8e, 0x3b, 0xfe, 0xee, 0x2e, 0xbb, 0xfd,
+	0x12, 0xb3, 0xe2, 0x87, 0x20, 0xb4, 0x2b, 0xc3, 0x4f, 0x8e, 0x4d, 0x62, 0xdb, 0x3e, 0x37, 0xbe,
+	0xbf, 0xed, 0xa8, 0xcc, 0x3c, 0x38, 0xf9, 0xfc, 0xe3, 0xe7, 0xb7, 0xc6, 0x11, 0xe9, 0x99, 0x2f,
+	0x5a, 0x39, 0x2d, 0xa3, 0x18, 0xf5, 0x45, 0x6e, 0xa2, 0xde, 0x40, 0xa7, 0x3e, 0x0d, 0xa4, 0x5f,
+	0x0d, 0x57, 0x9d, 0x79, 0xff, 0xe4, 0x0f, 0xa7, 0x96, 0x37, 0x30, 0x3c, 0x9f, 0x78, 0x1b, 0xbc,
+	0x65, 0xf8, 0x64, 0x0d, 0xb9, 0x6c, 0xab, 0x1a, 0xb2, 0x3a, 0x0d, 0x75, 0x64, 0xad, 0x69, 0xef,
+	0xb0, 0x58, 0x28, 0x89, 0x80, 0x76, 0xa5, 0x31, 0x6c, 0x25, 0xb7, 0x75, 0xa3, 0xad, 0xe4, 0xd6,
+	0x3e, 0x0a, 0x9e, 0x19, 0xcc, 0x93, 0xe0, 0x70, 0x1d, 0xa3, 0x8c, 0xb4, 0xd0, 0xbd, 0x70, 0xce,
+	0x3e, 0x35, 0xcd, 0xdf, 0xc2, 0xf9, 0xaf, 0x00, 0x00, 0x00, 0xff, 0xff, 0xa4, 0x19, 0x8f, 0x1d,
+	0x58, 0x06, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
