# m2m/api/swagger/device.swagger.json
@@ -40,6 +40,20 @@
             "required": false,
             "type": "string",
             "format": "int64"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -61,6 +75,20 @@
         "parameters": [
           {
             "name": "orgId",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "limit",
             "in": "query",
             "required": false,
             "type": "string",
@@ -93,6 +121,20 @@
           },
           {
             "name": "devId",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "offset",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "limit",
             "in": "query",
             "required": false,
             "type": "string",
@@ -132,15 +174,6 @@
     }
   },
   "definitions": {
-    "apiDeviceMode": {
-      "type": "string",
-      "enum": [
-        "inactive",
-        "free_gateways_limited",
-        "whole_network"
-      ],
-      "default": "inactive"
-    },
     "apiDeviceProfile": {
       "type": "object",
       "properties": {
@@ -278,9 +311,6 @@
         "status": {
           "type": "boolean",
           "format": "boolean"
-        },
-        "devMode": {
-          "$ref": "#/definitions/apiDeviceMode"
         },
         "userProfile": {
           "$ref": "#/definitions/apiProfileResponse"
